Fixade problem med z-index för cookie-popup.

--- a/assets/css/cookiealert.css
+++ b/assets/css/cookiealert.css
@@ -34,14 +34,14 @@
     left: 0;
     right: 0;
     opacity: 0;
-    z-index: 9999;
-    background: 
-    rgba(0,0,0,.5);
+    z-index: -1;
+    background: rgba(0,0,0,.5);
     bottom: 0;
-}
+}   
 
 .cookie-consent-overlay.show {
     opacity: 1;
+    z-index: 9999!important;
     transform: translateY(0%);
     transition-delay: 1000ms;
 }
